--- a/PersonalFinanceExpenses/PFE.Web/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/PersonalFinanceExpenses/PFE.Web/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -40,24 +40,9 @@
                     <!-- small box -->
                     <div class="small-box bg-info">
                         <div class="inner">
-                            <h3>15</h3>
+                            <h3>@ViewBag.totalBudget</h3>
 
-                            <p>Post</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-bag"></i>
-                        </div>
-                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                    </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-success">
-                        <div class="inner">
-                            <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-                            <p>Bounce Rate</p>
+                            <p>Budget</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
@@ -68,11 +53,26 @@
                 <!-- ./col -->
                 <div class="col-lg-3 col-6">
                     <!-- small box -->
+                    <div class="small-box bg-success">
+                        <div class="inner">
+                            <h3>@ViewBag.totalExpenses</h3>
+
+                            <p>Bounce Rate</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-pie-graph"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-3 col-6">
+                    <!-- small box -->
                     <div class="small-box bg-warning">
                         <div class="inner">
-                            <h3>@ViewBag.totalUser</h3>
+                            <h3>@ViewBag.remain</h3>
 
-                            <p>User Registrations</p>
+                            <p>Remaining</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-person-add"></i>
