--- a/PersonalFinanceExpenses/PFE.Web/Areas/Identities/Views/Register/Registration.cshtml
+++ b/PersonalFinanceExpenses/PFE.Web/Areas/Identities/Views/Register/Registration.cshtml
@@ -19,7 +19,7 @@
                 <form asp-controller="Register" asp-action="Registration" method="post" class="sign-in-form">
                  
                     <div>
-                        <h2 st class="title text-center">Register New Admin</h2>
+                        <h2 st class="title text-center">Register New Account</h2>
                         <hr /><br />
                     </div>
                     <div asp-validation-summary="All" class="text-danger"></div>
