--- a/PersonalFinanceExpenses/PFE.Web/Areas/Admin/Views/Shared/_LeftMenu.cshtml
+++ b/PersonalFinanceExpenses/PFE.Web/Areas/Admin/Views/Shared/_LeftMenu.cshtml
@@ -7,7 +7,7 @@
 {
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-            <img src="/admin/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+            <img src="/admin/img/avatar5.png" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
             <a class="nav-link d-block" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity.Name</a>
@@ -44,10 +44,10 @@
 
         @if (SignInManager.IsSignedIn(User))
         {
-            
-            <li class="nav-item oi oi-cog">
+
+            <li class="nav-item has-treeview menu-open">
                 <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button type="submit" class="nav-link btn btn-link">Logout</button>
+                    <button type="submit" class="nav-link btn btn-link text-white">Logout</button>
                 </form>
             </li>
         }
